# Head-Unit

./: HU.sh
Head_Unit/v0.0.0/Head_Unit_app/: CMakeLists.txt  UpdateWindow.qml  generateNote.cmake  main.qml  otaUpdate.cpp  qml.qrc  version.h  version.h.in  version_note.cpp.in
Head_Unit/v0.0.0/build-Head_Unit_app-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Head_Unit_app.cbp  build.ninja  cmake_install.cmake  rules.ninja  version.h  version_note.S  version_note.cpp
Head_Unit/v0.0.0/build-Head_Unit_app-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-2f4aed561a4c23b14455.json  cache-v2-30111ac3566a5cd1253b.json  cmakeFiles-v1-3b20d5a9f96055cb0c43.json  cmakeFiles-v1-6bb6ed5f16054a293bb5.json  cmakeFiles-v1-91d0a33138a2a26301c9.json  codemodel-v2-609e7659f6f32701972c.json  codemodel-v2-650f56653e3cc108ac52.json  codemodel-v2-c0278c9983d0a64f4a46.json  codemodel-v2-eafd7c4ddcbeaf2dc268.json  index-2025-05-05T10-07-56-0323.json  index-2025-06-09T13-28-45-0034.json  index-2025-06-09T16-54-50-0362.json  index-2025-06-12T15-10-11-0429.json  target-Head_Unit_app-Debug-54cd53f07eef38b47b7d.json  target-Head_Unit_app-Debug-7cae3311b2a108994ace.json  target-Head_Unit_app-Debug-a8d5c932c59c2345860d.json  target-Head_Unit_app-Debug-f1c34ef97ccb664722fe.json  target-Head_Unit_app_autogen-Debug-4801d6a54ecff39dc417.json  target-IC_someip-someip-Debug-3812759425f3831b0306.json  target-IC_someip-someip-Debug-570346263f376e5f3c4b.json  target-IC_someip-someip-Debug-ca6f7750a122fdf11a4a.json  target-IC_someip-someip_autogen-Debug-b80b419d4a9f5c51bd93.json  target-generate_version_note-Debug-3eac2152770006b6769a.json  target-version_note_obj-Debug-b57e26c8fa61ba524b5a.json
Head_Unit/v0.0.0/build-Head_Unit_app-Desktop-Debug/Head_Unit_app_autogen/EWIEGA46WW/: qrc_qml.cpp
Head_Unit/v1.0.0/Head_Unit_app/: BottomLayer.qml  CMakeLists.txt  CarInfo.qml  GearText.qml  MapWidget.qml  SettingApplication.qml  SettingMenuButton.qml  TopBar.qml  TopLayer.qml  carInfoController.cpp  carInfoController.h  main.cpp  main.qml  otaUpdate.cpp  otaUpdate.h  qml.qrc  resource.qrc
Head_Unit/v1.0.0/build-Head_Unit_app-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Head_Unit_app.cbp  build.ninja  cmake_install.cmake  rules.ninja
Head_Unit/v1.0.0/build-Head_Unit_app-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-3c46df37686dde83b380.json  cmakeFiles-v1-01f7b849cd78d59ca0d1.json  cmakeFiles-v1-4abfe898a25837817d1a.json  codemodel-v2-90b3862be9aac11af956.json  codemodel-v2-e581bba614c83d6a72ca.json  index-2025-05-05T12-35-47-0769.json  index-2025-06-02T16-39-39-0642.json  index-2025-06-09T15-27-22-0977.json  target-Head_Unit_app-Debug-b59c8b3e46f29dda730c.json  target-Head_Unit_app-Debug-e200c46a7abe5b0fe3de.json  target-Head_Unit_app_autogen-Debug-172e86c452ffd3925773.json  target-IC_someip-someip-Debug-1db32d8bb6544c1eb7ca.json  target-IC_someip-someip-Debug-234722b1900e999329e6.json  target-IC_someip-someip_autogen-Debug-c9fd0b99c6edbf61fc22.json
Head_Unit/v1.0.0/build-Head_Unit_app-Desktop-Debug/Head_Unit_app_autogen/: mocs_compilation.cpp
Head_Unit/v1.0.0/build-Head_Unit_app-Desktop-Debug/Head_Unit_app_autogen/EWIEGA46WW/: moc_otaUpdate.cpp  qrc_qml.cpp
fidl/src-gen/core/v0/commonapi/: ICProxy.hpp  ICStub.hpp  ICStubDefault.hpp
fidl/src-gen/someip/v0/commonapi/: ICSomeIPProxy.cpp  ICSomeIPProxy.hpp  ICSomeIPStubAdapter.hpp
json/: HU.json
src-gen/core/v0/commonapi/: ICProxyBase.hpp
